FIO-5872: fixed an issue where Wizard page navigation buttons are centrally aligned in the Next portal (#4938)

--- a/src/sass/formio.form.scss
+++ b/src/sass/formio.form.scss
@@ -1456,6 +1456,7 @@ div[data-oembed-url] {
 
 .formio-form > div > nav > ul.pagination {
   flex-flow: wrap row;
+  justify-content: flex-start;
 
   .page-link {
     cursor: pointer;
